Mobile viewport support, Fixed score alignment, fixed splash screen sizes on mobile, started to refactor code into helper functions, created util.js, added comments, fixed some CSS issues, added more TODOs

--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,12 @@ body {
 	height: 800px;*/
 }
 
+#startSplash {
+
+}
+
 #prompt {
-	width: 350px;
+	width: 300px;
 	height: 25px;
 	margin: auto;
 	position: absolute;
@@ -57,9 +61,10 @@ body {
 }
 
 #endSplash {
-	width: 500px;
+	width: 300px;
 	height: 250px;
 	margin: auto;
+	padding: 10px;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
 	z-index: 150;
@@ -124,6 +129,7 @@ td {
 
 ul {
 	list-style-type: none;
+	padding: 0;
 }
 
 input {
